--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -110,6 +110,13 @@ button {
   }
 }
 
+.description-ai-button {
+  svg {
+    margin-bottom: -6px;
+    margin-right: 3px;
+  }
+}
+
 .allow-random-draw {
   margin: 5px;
   margin-bottom: 15px;
