--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -282,6 +282,12 @@
             <mat-chip class="genre user-select-none"> {{ genre }} </mat-chip>
             }
         </mat-chip-set>
+        @if (data?.pollItem?.id) {
+          <div class="add-new-item-btn suggest-movie-btn" (click)="suggestMovie(movie)">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M200-313q10-3 19.5-5t20.5-2h40v-480h-40q-17 0-28.5 11.5T200-760v447Zm40 233q-50 0-85-35t-35-85v-560q0-50 35-85t85-35h280v80H360v480h240v-120h80v200H240q-17 0-28.5 11.5T200-200q0 17 11.5 28.5T240-160h520v-320h80v400H240Zm-40-233v-487 487Zm500-167q0-92 64-156t156-64q-92 0-156-64t-64-156q0 92-64 156t-156 64q92 0 156 64t64 156Z"/></svg> Why vote this?
+          </div>
+        }
+
       </div>
     </div>
     @if (movie) {
@@ -337,7 +343,7 @@
     <div class="description">
       "<span [innerHTML]="urlify(data.description)"></span>"
     </div>
-    } } @if (data.pollItemId && editDescription !== undefined) {
+    } } @if (data.pollItem && editDescription !== undefined) {
     <textarea rows="4" [(ngModel)]="editDescription"></textarea>
     } @if (data.editable) {
     <button
