--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -639,6 +639,10 @@
       color: #969494;
       width: 45px;
     }
+
+    .show-more-button {
+      margin-right: -15px;
+    }
   }
 }
 
@@ -709,5 +713,58 @@
 
   .overview-info {
     display: none;
+  }
+}
+
+.show-more-button {
+  margin-right: -20px;
+}
+
+.hidden-poll-owner {
+  border: 2px dashed grey;
+  background-color: #dfdddd;
+
+  .hidden-text {
+    mat-icon {
+      margin-right: 5px;
+    }
+
+    background: grey;
+    color: white;
+    min-width: calc(100% + 2* 12px);
+    text-align: center;
+    margin-bottom: -13px;
+    border-radius: 0 0 5px 5px;
+    font-size: 0.6em;
+    padding: 2px 6px;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.selected {
+  border: 2px dashed #8800bf;
+
+  .selected-text {
+    .icon {
+      font-size: 1.5em;
+      margin-right: 5px;
+      line-height: 1em;
+    }
+
+    background-image: linear-gradient(225deg, #8800bf 0%, #08b9d3 100%);
+    color: white;
+    min-width: calc(100% + 2* 12px);
+    text-align: center;
+    margin-bottom: -13px;
+    border-radius: 0 0 5px 5px;
+    font-size: 0.6em;
+    padding: 6px;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
