Add suggestive add option to adding movies. Add generative adding suggestion description. Use new AI related icons. Minor style fixes.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,4 +13,8 @@
     Also ratings data from OMDb API is used.
   </p>
   <p><span class="version">poll-a-lot v{{ version }}</span><br/></p>
+
+  <p>
+    <a href="https://www.flaticon.com/free-icons/create" title="create icons">Create icons created by HideMaru - Flaticon</a>
+  </p>
 </mat-card>
