--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -655,7 +655,7 @@ div.dialog-content {
   white-space: unset;
   margin: 20px auto 0 !important;
 
-  svg {
+  img {
     margin-right: 5px;
   }
 }
