--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -111,9 +111,9 @@ button {
 }
 
 .description-ai-button {
-  svg {
+  img {
     margin-bottom: -6px;
-    margin-right: 3px;
+    margin-right: 5px;
   }
 }
 
