--- a/src/app/movie-search-input/movie-search-input.component.html
+++ b/src/app/movie-search-input/movie-search-input.component.html
@@ -1,5 +1,5 @@
-
-<mat-form-field style="width: 100%">
+<div class="container">
+  <mat-form-field style="width: 100%">
     <input
       type="text"
       matInput
@@ -10,13 +10,22 @@
       [matAutocomplete]="auto"
       [autofocus]="false"
     />
-    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" (optionsScroll)="onScroll()">
+    <mat-autocomplete
+      autoActiveFirstOption
+      #auto="matAutocomplete"
+      (optionsScroll)="onScroll()"
+    >
       @for (movie of searchResults$ | async; track movie.id) {
-      <mat-option
-        (click)="movieClicked(movie)"
-      >
+      <mat-option (click)="movieClicked(movie)">
         <movie-search-result [movie]="movie"></movie-search-result>
       </mat-option>
       }
     </mat-autocomplete>
   </mat-form-field>
+  @if (pollMovies?.length) {
+    <suggest-movie-button
+      [pollMovies]="pollMovies"
+      (movieSelected)="movieClicked($event)"
+    ></suggest-movie-button>
+  }
+</div>
