--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -292,7 +292,7 @@ userService.isCurrentUser(poll?.owner) : false);
       @if(poll.moviepoll) {
         <div class="description-ai-button" (click)="descriptionButtonClick(poll, pollItems)" style="text-align: center">
           <button mat-button aria-label="Show AI generated movie poll description">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#8d61c7"><path d="M200-313q10-3 19.5-5t20.5-2h40v-480h-40q-17 0-28.5 11.5T200-760v447Zm40 233q-50 0-85-35t-35-85v-560q0-50 35-85t85-35h280v80H360v480h240v-120h80v200H240q-17 0-28.5 11.5T200-200q0 17 11.5 28.5T240-160h520v-320h80v400H240Zm-40-233v-487 487Zm500-167q0-92 64-156t156-64q-92 0-156-64t-64-156q0 92-64 156t-156 64q92 0 156 64t64 156Z"/></svg> Can't decide? Try these <u>ideas</u> for voting
+            <img [lazyLoad]="'/assets/img/icons-ai/love.png'" width="24px" height="24px"> Can't decide? Try these <u>ideas</u> for voting
           </button>
         </div>
       }
