Show suggestive item add when adding new polls after first item. Update suggestions when new item to pollitems are added.

--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -95,7 +95,7 @@
   </div>
   <!-- Movie search -->
   @if (poll.moviepoll) {
-  <movie-search-input (movieSelected)="addMoviePollItem($event)"></movie-search-input>
+  <movie-search-input (movieSelected)="addMoviePollItem($event)" [pollMovies]="pollMovies$ | async"></movie-search-input>
 
   @if (watchlistItems$ | async; as
     watchlistMovies) {
