--- a/src/app/suggest-movie-button/suggest-movie-button.component.scss
+++ b/src/app/suggest-movie-button/suggest-movie-button.component.scss
@@ -1,10 +1,15 @@
 .container {
     position: relative;
+    width: 48px;
+    height: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
 .movie-spinner {
     position: absolute;
-    right: 2px;
-    top: 2px;
+    right: 14px;
+    top: 14px;
 }
