--- a/src/app/poll-link-copy/poll-link-copy.component.html
+++ b/src/app/poll-link-copy/poll-link-copy.component.html
@@ -3,7 +3,7 @@
   mat-icon-button
   type="button"
   aria-label="Copy poll url button"
-  [cdkCopyToClipboard]="pollUrl"
+  [cdkCopyToClipboard]="copyContent"
   (click)="afterCopied()"
   aria-label="Copy"
 >
