--- a/src/app/share-dialog/share-dialog.component.html
+++ b/src/app/share-dialog/share-dialog.component.html
@@ -12,7 +12,7 @@
     <br/>
   Sharing is caring! ✨<br />
   <p class="copy-container">
-    <label>Copy poll link </label><poll-link-copy [pollName]="input.name" [pollId]="pollId"></poll-link-copy>
+    <label>Copy poll link </label><poll-link-copy [name]="input.name" [pollId]="pollId"></poll-link-copy>
   </p>
   <br />
   @if (_navigator && _navigator.share) {
