--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -344,7 +344,7 @@
         [description]="{
           extraInfo: movie.originalObject ? ((movie | credit:'directors') + ' | ' + (movie | productionCountry)) : undefined,
           tagline: movie.tagline,
-          ratings: { tmdb: (movie.tmdbRating * 10 | number: '1.0-0'), imdb: movie.imdbRating.split('/')[0], lb: (movie.letterboxdRating | number: '1.1-1'), rt: movie.rottenRating},
+          ratings: { tmdb: (movie.tmdbRating * 10 | number: '1.0-0'), imdb: movie.imdbRating?.split('/')[0], lb: (movie.letterboxdRating | number: '1.1-1'), rt: movie.rottenRating},
           duration: movie.runtime,
           overview: movie.overview
         }"
