--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -73,8 +73,7 @@
   }
 
   .original-title {
-    line-height: 1.15em;
-    margin-top: 0 0 2px;
+    margin: 0 0 2px;
     font-size: 0.65em;
     line-height: 1.25em;
     font-weight: 500;
