--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -1,6 +1,6 @@
-@if(user$ | async; as user) {
-<mat-card style="padding-bottom: 5px">
-  @if (user.id) { @if (loading$ | async) {
+@let user = user$ | async;
+<mat-card class="add-poll" style="padding-bottom: 5px">
+  @if (user?.id) {@if (loading$ | async) {
   <spinner></spinner>
   }
   <button mat-button class="settings-button" (click)="settings = !settings">
@@ -95,49 +95,60 @@
   </div>
   <!-- Movie search -->
   @if (poll.moviepoll) {
-  <movie-search-input (movieSelected)="addMoviePollItem($event)" [pollMovies]="pollMovies$ | async"></movie-search-input>
+  <movie-search-input
+    (movieSelected)="addMoviePollItem($event)"
+    [pollMovies]="pollMovies$ | async"
+  ></movie-search-input>
 
-  @if (watchlistItems$ | async; as
-    watchlistMovies) {
-    <div class="add-from-watchlist">
-      <h3>Add from your watchlist <mat-icon>bookmark_added</mat-icon></h3>
-      <div class="watchlist-movies movies start-height">
-        @for (watchlistItem of watchlistMovies.slice(0, showWatchlistItemsCount);
-        track watchlistItem.moviePollItemData.id; let i = $index) { @let
-        reversedWatchlistItem = watchlistMovies[watchlistMovies.length - 1 - i];
-        <div class="movie cursor-pointer">
-          <poster
-            [movieId]="reversedWatchlistItem.moviePollItemData.id"
-            [posterPath]="reversedWatchlistItem.moviePollItemData.posterPath"
-            [rating]="reversedWatchlistItem.movieIndex.tmdbRating"
-            size="xs"
-            hideBorder="true"
-            (movieClicked)="addMoviePollItem(reversedWatchlistItem.moviePollItemData)"
-          ></poster>
-        </div>
-        }
+  @if (watchlistItems$ | async; as watchlistMovies) {
+  <div class="add-from-watchlist">
+    <h3>Add from your watchlist <mat-icon>bookmark_added</mat-icon></h3>
+    <div class="watchlist-movies movies start-height">
+      @for (watchlistItem of watchlistMovies.slice(0, showWatchlistItemsCount);
+      track watchlistItem.moviePollItemData.id; let i = $index) { @let
+      reversedWatchlistItem = watchlistMovies[watchlistMovies.length - 1 - i];
+      <div class="movie cursor-pointer">
+        <poster
+          [movieId]="reversedWatchlistItem.moviePollItemData.id"
+          [posterPath]="reversedWatchlistItem.moviePollItemData.posterPath"
+          [rating]="reversedWatchlistItem.movieIndex.tmdbRating"
+          size="xs"
+          hideBorder="true"
+          (movieClicked)="
+            addMoviePollItem(reversedWatchlistItem.moviePollItemData)
+          "
+        ></poster>
       </div>
-      <div class="flex">
-        @if (showWatchlistItemsCount > watchlistRowCount &&
-        showWatchlistItemsCount < watchlistMovies.length) {
-        <div
-          class="load-more-button cursor-pointer"
-          (click)="showWatchlistItemsCount = watchlistRowCount"
-        >
-          Show less
-        </div>
-        }
-        <div
-          class="load-more-button cursor-pointer"
-          (click)="showWatchlistItemsCount < watchlistMovies.length ? showWatchlistItemsCount = showWatchlistItemsCount +  watchlistRowCount: showWatchlistItemsCount = watchlistRowCount"
-        >
-          {{ showWatchlistItemsCount < watchlistMovies.length ? 'Show more' :
-          'Show less' }}
-        </div>
+      }
+    </div>
+    <div class="flex">
+      @if (showWatchlistItemsCount > watchlistRowCount &&
+      showWatchlistItemsCount < watchlistMovies.length) {
+      <div
+        class="load-more-button cursor-pointer"
+        (click)="showWatchlistItemsCount = watchlistRowCount"
+      >
+        Show less
+      </div>
+      }
+      <div
+        class="load-more-button cursor-pointer"
+        (click)="
+          showWatchlistItemsCount < watchlistMovies.length
+            ? (showWatchlistItemsCount =
+                showWatchlistItemsCount + watchlistRowCount)
+            : (showWatchlistItemsCount = watchlistRowCount)
+        "
+      >
+        {{
+          showWatchlistItemsCount < watchlistMovies.length
+            ? "Show more"
+            : "Show less"
+        }}
       </div>
     </div>
-    }
-  }
+  </div>
+  } }
   <!-- TV Series search -->
   @if (poll.seriesPoll) {
   <mat-form-field class="full-width" style="margin-bottom: 15px">
@@ -225,7 +236,7 @@
     Never submit passwords or other sensitive data to the poll fields.
   </p>
   } @else {
-  <mat-card class="login-card">
+  <div class="login-card">
     <p>To create content, you need to sign-in with Google.</p>
     <p class="tech-details">
       Poll-a-Lot uses Firebase Authentication and only you forename will be
@@ -237,7 +248,6 @@
       >
     </p>
     <login-button (loginClicked)="login()"></login-button>
-  </mat-card>
+  </div>
   }
 </mat-card>
-}
