--- a/src/app/add-poll/add-poll.component.scss
+++ b/src/app/add-poll/add-poll.component.scss
@@ -1,3 +1,7 @@
+mat-card.add-poll {
+  --mdc-elevated-card-container-shape: 0 0 5px 5px;
+}
+
 .option-card {
   position: relative;
   margin-bottom: 10px;
