--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,6 +1,7 @@
 :host {
   mat-card {
     --mdc-elevated-card-container-shape: 0 0 5px 5px;
+    --mdc-elevated-card-container-color: #100c29;
   }
 }
 
@@ -22,28 +23,170 @@
   }
 }
 
-.recent-poll-container {
-  position: relative;
+.now-playing {
+  // margin-left: -40px;
   display: flex;
-  justify-content: center;
-  flex-direction: column;
-  font-size: 0.6em;
-  padding: 10px 20px;
-  cursor: pointer;
-  background: linear-gradient(var(--mdc-elevated-card-container-color), var(--mdc-elevated-card-container-color)) padding-box,
-    linear-gradient(to right bottom, #aa70ea, #d9c6ee) border-box;
-  border-radius: 9px;
-  border: 2px solid transparent;
-  margin: 17px 0;
-  text-align: left;
+  width: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  padding-top: 20px;
+  position: relative;
 
-  .continue-text {
-    color: #8e8e8e;
-    font-size: 0.8em;
-    margin-bottom: 2px;
+  &-container {
+    background: #0f0c29;
+    color: whitesmoke;
+    width: calc(100% + 2 * 40px);
+    position: relative;
+    left: -40px;
+    padding: 24px 0 30px;
+    margin-bottom: -40px;
+    animation: pl-drop-in 1200ms ease 400ms backwards;
+    overflow: hidden;
+    margin-top: 16px;
   }
 
-  .recent-poll-title {
+  &-movie {
+    margin: 0 14px 0 0;
+  }
+
+  .right-edge {
+    position: absolute;
+    right: -125px;
+    height: calc(100% - 36px);;
+    width: 200px;
+    background-image: linear-gradient(to right, transparent, var(--mdc-elevated-card-container-color) 50%);
+    z-index: 1;
+  }
+}
+
+$anim-duration: 5; // in seconds
+$anim-speed: 0.65; // in seconds
+
+:host {
+  --btn-bg: transparent; // #333
+  --btn-shadow: 1px 1px 25px 10px rgba(255, 255, 255, 0.5);
+  --btn-text-color: #f4f4f4;
+
+  --shine-degree: 120deg;
+  --shine-color: rgba(255, 255, 255, 0.2);
+  --shine-effect: linear-gradient(
+    var(--shine-degree),
+    transparent,
+    var(--shine-color),
+    transparent
+  );
+  --shine-transition: all #{$anim-speed}s ease-in-out;
+}
+
+
+.btn {
+  position: relative;
+  overflow: hidden; // debug
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--shine-effect);
+  }
+
+  &-shine {
+    &::before {
+      animation: shine #{$anim-duration}s ease-in-out infinite;
+    }
+  
+    padding: 16px 24px;
+    text-align: center;
+  }
+}
+
+@keyframes shine {
+  0% {
+    left: -100%;
+    transition-property: left;
+  }
+  #{calc($anim-speed / ($anim-duration + $anim-speed) * 100%)},
+  100% {
+    left: 100%;
+    transition-property: left;
+  }
+}
+
+@keyframes pl-drop-in {
+  from {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0px);
+  }
+}
+
+.header-container {
+  width: calc(100% + 2 * 20px);
+  position: relative;
+  left: -40px;
+  top: -40px;
+  background-image: url("/assets/img/movie-theater.webp");
+  background-size: cover;
+  color: whitesmoke;
+  padding: 50px 20px 40px;
+
+  img {
+    width: 40%;
+  }
+
+  .title-text {
+    text-align: left;
+    font-size: min(7.5vw, 50px);
+    margin: 0;
+  }
+
+  .sub-text {
+    font-size: 18px;
+    text-align: left;
+  }
+}
+
+.middle-container {
+  margin: -40px;
+  padding: 40px;
+}
+
+.recent-poll-container {
+  animation: pl-drop-in 1200ms ease 400ms backwards;
+  min-height: 57px;
+}
+
+.create-btn {
+  --mdc-protected-button-label-text-size: 1em;
+  --mdc-text-button-container-shape: 100px;
+  --mdc-protected-button-container-shape: 100px;
+  height: 2em;
+  width: fit-content;
+  padding: 0 40px;
+  margin: 10px 40px;
+}
+
+.lawrencium {
+  background: #0f0c29;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.recent-poll {
+  & > div {
+    animation: pl-drop-in 1200ms ease 400ms backwards;
+  }
+  
+  font-size: 16px;
+  min-height: 49px;
+  align-content: flex-end;
+
+  &-title {
     text-decoration: underline;
   }
 }
