--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -4,6 +4,7 @@ $posterHeight: calc(3 / 2 * $posterWidth);
 
 :host {
   --mat-expansion-container-background-color: transparent;
+  background: white;;
 }
 
 @keyframes pl-drop-in {
@@ -1044,7 +1045,6 @@ $anim-duration: 5; // in seconds
 $anim-speed: 0.65; // in seconds
 
 :host {
-  background: white;
   --btn-bg: transparent; // #333
   --btn-shadow: 1px 1px 25px 10px rgba(255, 255, 255, 0.5);
   --btn-text-color: #f4f4f4;
@@ -1059,6 +1059,7 @@ $anim-speed: 0.65; // in seconds
   );
   --shine-transition: all #{$anim-speed}s ease-in-out;
 }
+
 
 .btn {
   position: relative;
@@ -1083,15 +1084,15 @@ $anim-speed: 0.65; // in seconds
     height: 100%;
     background: var(--shine-effect);
   }
-}
 
-.btn-shine {
-  &::before {
-    animation: shine #{$anim-duration}s ease-in-out infinite;
+  &-shine {
+    &::before {
+      animation: shine #{$anim-duration}s ease-in-out infinite;
+    }
+  
+    padding: 16px 24px;
+    text-align: center;
   }
-
-  padding: 16px 24px;
-  text-align: center;
 }
 
 @keyframes shine {
