Add Letterboxd to footer links, turn the link to anchors. Minor update on landing page text styles.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,16 +1,7 @@
 <div class="footer">
   &#9426; Jari Kuisma {{ today | date : "YYYY" }}
   |
-  <span
-    (click)="window?.open('https://www.linkedin.com/in/kuismajari/')"
-    title="Jari Kuisma @ LinkedIn"
-    style="text-decoration: underline"
-    >LinkedIn</span
-  >
-  |
-  <span
-    (click)="window?.open('https://github.com/acoustic-/poll-a-lot')"
-    style="text-decoration: underline"
-    >Github</span
-  >
+  <a href="https://www.linkedin.com/in/kuismajari/" title="Jari Kuisma @ LinkedIn">LinkedIn</a> |
+  <a href="https://github.com/acoustic-/poll-a-lot">Github</a> |
+  <a href="https://boxd.it/3roL">Letterboxd</a>
 </div>
