--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -32,6 +32,10 @@
   padding-top: 20px;
   position: relative;
 
+  h2 {
+    font-size: min(1.5em, 8vw);
+  }
+
   &-container {
     background: #0f0c29;
     color: whitesmoke;
@@ -52,7 +56,7 @@
   .right-edge {
     position: absolute;
     right: -125px;
-    height: calc(100% - 36px);;
+    height: 100%;
     width: 200px;
     background-image: linear-gradient(to right, transparent, var(--mdc-elevated-card-container-color) 50%);
     z-index: 1;
