Fix issue with suggesting movies with only one source movie in list. Open movie dialog in add-poll to add movie. Search movie input rounded style. Minor style fixes.

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -53,6 +53,7 @@
   </p> -->
   <div class="middle-container lawrencium">
     <movie-search-input
+      [rounded]="true"
       (movieSelected)="openMovie($event)"
     ></movie-search-input>
   </div>
