--- a/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.html
+++ b/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.html
@@ -30,7 +30,8 @@
   </div>
 
   <movie-search-input
-    [pollMovies]="pollMovies"
+    [pollMovieNames]="pollMovieNames"
+    [pollMovieIds]="pollMovieIds"
     (movieSelected)="addMoviePollItem($event, true)"
   ></movie-search-input>
 
