--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -97,7 +97,9 @@
   @if (poll.moviepoll) {
   <movie-search-input
     (movieSelected)="addMoviePollItem($event)"
-    [pollMovies]="pollMovies$ | async"
+    [pollMovieNames]="pollMovieNames$ | async"
+    [pollMovieIds]="pollMovieIds$ | async"
+    [confirmSuggestion]="true"
   ></movie-search-input>
 
   @if (watchlistItems$ | async; as watchlistMovies) {
